--- a/OurMission.html
+++ b/OurMission.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="ourmission.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
-<<<<<<< HEAD
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <<<<<<< HEAD <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,86 +22,85 @@
             <li><a href="contactus.html">Contact Us</a></li>
         </ul>
     </nav>
-=======
-</head>
+    =======
+    </head>
 
-<body>
->>>>>>> 4f019a904b43bce0673c4fef4991a3b485dd5ef0
-    <div class="mission">
-        <h1>Our Mission</h1>
-        <p>Founded in 1997, First Hope works to to bring awareness that slavery still exists. </p>
+    <body>
+        >>>>>>> 4f019a904b43bce0673c4fef4991a3b485dd5ef0
+        <div class="mission">
+            <h1>Our Mission</h1>
+            <p>Founded in 1997, First Hope works to to bring awareness that slavery still exists. </p>
 
-    </div>
+        </div>
 
-    <h2 style="text-align:center">We do this in three ways:</h2>
-    <div class="row">
-        <div class="column">
-            <div class="box">
+        <h2 style="text-align:center">We do this in three ways:</h2>
+        <div class="row">
+            <div class="column">
+                <div class="box">
 
-                <div class="container">
-                    <h2>Educate</h2>
-                    <p class="title"></p>
-                    <p>We <strong>EDUCATE </strong> on the statistics of Human trafficking.</p>
+                    <div class="container">
+                        <h2>Educate</h2>
+                        <p class="title"></p>
+                        <p>We <strong>EDUCATE </strong> on the statistics of Human trafficking.</p>
 
-                    <p><button class="button">Connect</button></p>
+                        <p><button class="button">Connect</button></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="box">
+
+                    <div class="container">
+                        <h2>Equip</h2>
+                        <p class="title"></p>
+                        <p>We <strong>EQUIP</strong> with resources to help others get involved.</p>
+
+                        <p><button class="button">Connect</button></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="box">
+
+                    <div class="container">
+                        <h2>Encourage</h2>
+                        <p class="title"></p>
+                        <p>We <strong>ENCOURAGE</strong> others to participate in the movement. </p>
+
+                        <p><button class="button">Connect</button></p>
+
+
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
+        <div class="endit">
+            <img src=" https://media.istockphoto.com/vectors/cross-sign-red-hand-drawn-brush-paint-x-letter-handwritten-crisscross-vector-id1276735653?k=20&m=1276735653&s=612x612&w=0&h=jMkY-27H5JC4Dt9Vlq4PurAJo9AFNQ9-sJPmLcixtlU="
+                alt=redx>"
+        </div>
+        <script src="script.js"></script>
 
-        <div class="column">
-            <div class="box">
 
-                <div class="container">
-                    <h2>Equip</h2>
-                    <p class="title"></p>
-                    <p>We <strong>EQUIP</strong> with resources to help others get involved.</p>
-
-                    <p><button class="button">Connect</button></p>
+        <footer>
+            <<<<<<< HEAD <div class="statementpt2">
+                <p class="statement">Copyright © 2022, Created and Founded by <em> First Hope</em> </p>
+                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+                <a href="https://twitter.com" class="fa fa-twitter"></a>
+                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                 </div>
-            </div>
-        </div>
+                =======
+                <p>Coded by: Evelyn Langarica<br>
 
-        <div class="column">
-            <div class="box">
-
-                <div class="container">
-                    <h2>Encourage</h2>
-                    <p class="title"></p>
-                    <p>We <strong>ENCOURAGE</strong> others to participate in the movement. </p>
-
-                    <p><button class="button">Connect</button></p>
+                </p>
+                >>>>>>> 4f019a904b43bce0673c4fef4991a3b485dd5ef0
+        </footer>
 
 
-                </div>
-
-
-
-            </div>
-        </div>
-    </div>
-    <div class="endit">
-        <img src=" https://media.istockphoto.com/vectors/cross-sign-red-hand-drawn-brush-paint-x-letter-handwritten-crisscross-vector-id1276735653?k=20&m=1276735653&s=612x612&w=0&h=jMkY-27H5JC4Dt9Vlq4PurAJo9AFNQ9-sJPmLcixtlU="
-            alt=redx>"
-    </div>
-    <script src="script.js"></script>
-
-
-    <footer>
-<<<<<<< HEAD
-        <div class="statementpt2">
-            <p class="statement">Copyright © 2022, Created and Founded by <em> First Hope</em> </p>
-            <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-            <a href="https://twitter.com" class="fa fa-twitter"></a>
-            <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-        </div>
-=======
-        <p>Coded by: Evelyn Langarica<br>
-
-        </p>
->>>>>>> 4f019a904b43bce0673c4fef4991a3b485dd5ef0
-    </footer>
-
-
-</body>
+    </body>
 
 </html>
