--- a/GroupProjectJustice/resources.html
+++ b/GroupProjectJustice/resources.html
@@ -26,7 +26,7 @@
         <li><a href ="resources.html">Resources</a></li>
         <li><a href ="ourmission.html">Our mission</a></li>
         <li><a href ="ourteam.html">Meet our team</a></li>
-        <li><a href ="contactus.html">Contact us</a></li>
+        <li><a href ="contact-us.html">Contact us</a></li>
     </ul>
   </nav>
 
